fix annoying linebreak in table

--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -42,6 +42,7 @@
 .Table span {
     padding: .75em;
     display: block;
+    white-space: nowrap;
 }
 
 .Table a{
